# ece866-term-project

./: .gitignore  README.md  pyproject.toml
data/: study_sites.json
data/geom/: michigan.geojson
doc/deliverables/data/: site1_evi.mat  site1_modis_12q2.mat  site1_ndvi.mat  site1_raw.mat  site1_raw.npz  site2_evi.mat  site2_modis_12q2.mat  site2_ndvi.mat  site2_raw.mat  site2_raw.npz  site3_evi.mat  site3_modis_12q2.mat  site3_ndvi.mat  site3_raw.mat  site3_raw.npz
doc/sphinx/doctrees/: ece866.doctree  ece866.gis.data.doctree  ece866.gis.data.mpc.doctree  ece866.gis.doctree  ece866.gis.geometry.doctree  ece866.time_frequency.doctree  ece866.util.cli.doctree  ece866.util.doctree  ece866.util.logger.doctree  ece866.util.math_utils.doctree  environment.pickle  gis.data.doctree  gis.doctree  index.doctree  time_frequency.doctree  util.doctree
doc/sphinx/html/: .buildinfo  .buildinfo.bak  ece866.gis.data.html  ece866.gis.data.mpc.html  ece866.gis.geometry.html  ece866.gis.html  ece866.html  ece866.time_frequency.html  ece866.util.cli.html  ece866.util.html  ece866.util.logger.html  ece866.util.math_utils.html  genindex.html  gis.data.html  gis.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  time_frequency.html  util.html
doc/sphinx/html/_sources/: ece866.gis.data.rst.txt  ece866.gis.rst.txt  ece866.rst.txt  ece866.time_frequency.rst.txt  ece866.util.rst.txt  index.rst.txt
doc/sphinx/html/_static/: documentation_options.js
scripts/: runTimeFrequencyAnalysis.m  run_load_data.py
sphinx/source/: conf.py  index.rst
src/gis/: geometry.py
src/gis/data/: conditioning.py  io.py  mpc.py
src/time_frequency/: TimingMetrics.m  analyzeCWT.m  analyzeDWT.m  analyzeEMD.m
src/util/: cli.py  dates.py  logger.py  math_utils.py
